# binctl

./: README.md  binctl  binctl.code-workspace  db.py  genclient.sh  openapi.yaml  pyproject.toml  requirements.txt  routes.py  rundev.sh  web.py
binctl-client/: README.md  pyproject.toml
binctl-client/binctl_client/: __init__.py
binctl-client/binctl_client/api/nodes/: get_node_detail.py  get_nodes_list.py  post_node_create.py  post_node_update.py
binctl-client/binctl_client/api/tags/: get_tag_detail.py  get_tags_list.py  post_tag_create.py  post_tag_update.py
binctl-client/binctl_client/models/: __init__.py  node.py  node_child.py  node_create.py  node_update.py  tag.py  tag_create.py  tag_update.py
schemas/: v1.sql
